Test assembly with spring dm

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,8 @@
         <module>bundle-with-slf4j</module>
         <module>bundle-without-slf4j</module>
         <module>features</module>
-        <module>dist</module>
+        <module>test-assembly</module>
+        <module>test-verify</module>
       </modules>
     </profile>
   </profiles>
